--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="recipes/pizza.html">Pizza with Ham, Asparagus, and Ricotta Recipe</a></li>
+        <li><a href="recipes/chocolate_fondant.html">Chocolate Fondant A La Maille Recipe</a></li>
+    </ul>
+    
 </body>
 
 </html>
